--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,8 @@ jobs:
           VITE_BASE_SERVER_URL: ${{ secrets.VITE_BASE_SERVER_URL }}
           VITE_SERVER_PORT: ${{ secrets.VITE_SERVER_PORT }}
         run: bun run build
+      - name: Copy index.html to 404.html
+        run: cp ./dist/index.html ./dist/404.html
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
